# sorigamis

./: .gitignore  README.md  RUNBOOK.md  pubspec.yaml
.github/workflows/: fly-preview.yml  fly-production.yml
.superpowers/sdd/: m2-progress.md
android/app/: build.gradle.kts
docs/superpowers/specs/: 2026-06-21-sorigami-design.md  (+4 more)
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/: enums.dart  router.dart
lib/providers/: providers.dart
pipeline/: .dockerignore  .env.example  Dockerfile  fly.preview.toml  fly.toml  main.py  models.py  pyproject.toml  supabase_client.py
pipeline/hermes/: context.py  runner.py
pipeline/hermes/skills/: sg-orchestrator.md  sg-skill-action-items.md  sg-skill-decisions.md  sg-skill-sentiment.md  sg-skill-summary.md
pipeline/routers/: jobs.py  modes.py  skills.py
pipeline/supabase/migrations/: 20260626000000_sg_schema.sql  20260627000000_require_review.sql
pipeline/tests/: conftest.py  test_deployment_config.py  test_email_tool.py  test_hermes_runner.py  test_jobs.py  test_modes.py  test_skills.py  test_team_meeting_validator.py  test_tools.py
pipeline/tests/e2e/: sg_validate_team_meeting.py
pipeline/tools/: sg_drive_download.py  sg_email_send.py  sg_linear_create.py  sg_notify_fcm.py  sg_quality.py  sg_slack_post.py  sg_supabase_write.py  sg_webhook_call.py
pipeline/workers/: diarize_worker.py  whisper_worker.py
supabase/migrations/: 20260627_quality_json.sql  20260627_require_review.sql
test/helpers/: test_database.dart
test/providers/: providers_test.dart
(+32 files in other folders)
