[project]
name = "sg-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "supabase>=2.11",
  "google-api-python-client>=2.154",
  "google-auth>=2.36",
  "google-auth-httplib2>=0.2",
  "httpx>=0.28",
  "pydantic>=2.10",
  "structlog>=25.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.32",
  "anyio[trio]>=4.7",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
